--- a/app/src/main/res/layout/message_custom_received.xml
+++ b/app/src/main/res/layout/message_custom_received.xml
@@ -10,7 +10,7 @@
         android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="53dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -63,16 +63,23 @@
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/userPic"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:contentDescription="Profile Image"
-        android:scaleType="centerCrop"
+    <androidx.cardview.widget.CardView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.761"
-        app:srcCompat="@drawable/defaultpp"
-        tools:srcCompat="@drawable/defaultpp" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/userPic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="Profile Image"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/defaultpp"
+            tools:srcCompat="@drawable/defaultpp" />
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
