--- a/app/src/main/res/layout/dialog_add_forum.xml
+++ b/app/src/main/res/layout/dialog_add_forum.xml
@@ -24,7 +24,8 @@
         app:layout_constraintBottom_toTopOf="@+id/inputDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="forum name"/>
 
     <EditText
         android:id="@+id/inputDescription"
@@ -42,7 +43,8 @@
         app:layout_constraintBottom_toTopOf="@+id/addForumButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputName" />
+        app:layout_constraintTop_toBottomOf="@+id/inputName"
+        android:autofillHints="forum description"/>
 
 
 </LinearLayout>
