--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -65,7 +65,8 @@
                     android:inputType="textMultiLine|textCapSentences"
                     android:maxHeight="120dp"
                     android:maxLength="256"
-                    android:scrollbars="vertical" />
+                    android:scrollbars="vertical"
+/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +78,7 @@
             android:layout_height="50dp"
             android:backgroundTint="@color/blue"
             android:clickable="true"
-            android:contentDescription="@string/todo"
+            android:contentDescription="@string/send_msg"
             app:srcCompat="@drawable/baseline_send_24" />
 
     </LinearLayout>
