--- a/app/src/main/res/layout/aboutus_activity.xml
+++ b/app/src/main/res/layout/aboutus_activity.xml
@@ -180,7 +180,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/titleForum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
