--- a/app/src/main/res/layout/activity_ip_address.xml
+++ b/app/src/main/res/layout/activity_ip_address.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/titleForum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/forumName"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
@@ -72,7 +72,7 @@
         app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/forumName">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
